--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/js/tabler.min.js"></script>
-    <script type="module" src="main.js"></script>
+    <script src="./main.js"></script>
 
 </body>
 
